--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
                     src="assets/img/Whimsical.JPG"></div>
                 <hr>
 
-                <h4 class="aos-init" data-aos="fade-up" data-aos-delay="100">5. 기능 구현</h4><br>
+                <h4 class="aos-init" data-aos="fade-up" data-aos-delay="100">5. 구현 기능</h4><br>
                 <div class="col-lg-6">
                   <div class="resume-item aos-init" data-aos="fade-up" data-aos-delay="100">
                     <h5>[ 메인 페이지 ]</h5>
@@ -419,7 +419,7 @@
                     <h5>[ 가맹점 관리(Store) ]</h5>
                     <ul>
                       <li><strong>가맹점 조회 (관리자 / 가맹점)</strong> : 전체 가맹점 리스트를 조회할 수 있습니다.</li>
-                      <li><strong>가맹점 등록 (관리자)</strong> : 관리자는 신규 가맹점을 등록할 수 있고 가맹점의 초기 아이디와 비밀번호를 설정하여 전달해 주며 주소는 카카오
+                      <li><strong>가맹점 등록 (관리자)</strong> : 관리자는 신규 가맹점을 등록할 수 있고 가맹점의 초기 아이디와 비밀번호를 설정하여 전달해 주며 주소 등록은 카카오
                         지도 API를
                         사용하였습니다.</li>
                       <li><strong>가맹점 정보 수정/삭제 (관리자)</strong> : 관리자는 가맹점 정보를 수정할 수 있고 폐점 시 가맹점 정보를 삭제할 수 있습니다.</li>
@@ -538,7 +538,7 @@
                         src="assets/img/ERD_HOMEBAB.png"></div>
                     <hr>
 
-                    <h4 class="aos-init" data-aos="fade-up" data-aos-delay="100">4. 기능 구현</h4><br>
+                    <h4 class="aos-init" data-aos="fade-up" data-aos-delay="100">4. 구현 기능</h4><br>
                     <div class="col-lg-6">
                       <div class="resume-item aos-init" data-aos="fade-up" data-aos-delay="100">
                         <h5>[ 메인 페이지 ]</h5>
@@ -561,6 +561,99 @@
                         <ul>
                           <li><strong>댓글 등록 / 삭제</strong> : 커뮤니티 컨셉을 반영하여 레시피 게시글 내 자유롭게 댓글을 등록 / 삭제할 수 있습니다.</li>
                           <li><strong>댓글 신고</strong> : 부적절한 리뷰라고 판단될 시 신고할 수 있고, 관리자가 판단하여 블랙리스트를 등록할 수 있습니다.</li>
+                        </ul>
+                      </div>
+                    </div>
+                    <hr>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class=" col-lg-6 col-md-8 portfolio-item filter-Spring">
+              <div class="portfolio-links">
+                <h3 class="aos-init" data-aos="fade-up" data-aos-delay="100">ToyProject</h3>
+                <p class="aos-init" data-aos="fade-up" data-aos-delay="100">[ SpringSecurity를 사용한 개인 프로젝트 ]<br>
+                  <a style="color: #aaa; text-decoration: underline;"
+                    href="https://github.com/minsukim0743/ToyProject"
+                    target="_blank">https://github.com/minsukim0743/ToyProject</a><br><br>
+                  <img src="assets/img/toyProject.png" class="img-fluid aos-init" data-aos="fade-up"
+                    data-aos-delay="100" alt="">
+                <div class="aos-init" data-aos="fade-up" data-aos-delay="100">
+                  <table class="aos-init" data-aos="fade-up" data-aos-delay="100">
+                    <tbody>
+                      <tr>
+                        <th>기여도</th>
+                        <td>
+                          전체 100% <strong>(Git 형상관리 및 기능 개발)</strong>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                  <table class="aos-init" data-aos="fade-up" data-aos-delay="100">
+                    <tbody>
+                      <tr>
+                        <th>설명</th>
+                        <td>
+                          <ul>
+                            <li>개발 인원 : 1명(개인 프로젝트)</li>
+                            <li>구현 기능 : 로그인 / 로그아웃 / 회원가입 / 비밀번호 찾기</li>
+                          </ul>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                  <table class="aos-init" data-aos="fade-up" data-aos-delay="100">
+                    <tbody>
+                      <tr>
+                        <th>기간</th>
+                        <td>2022.10.17 ~ 2022.10.23</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                  <table class="aos-init" data-aos="fade-up" data-aos-delay="100">
+                    <tbody>
+                      <tr>
+                        <th>언어</th>
+                        <td>Java(11),&nbsp; Html/Css, &nbsp;JavaScript</td>
+                      </tr>
+                      <tr>
+                        <th>서버</th>
+                        <td>Apache Tomcat 9.0</td>
+                      </tr>
+                      <tr>
+                        <th>DB</th>
+                        <td>Oracle</td>
+                      </tr>
+                      <tr>
+                        <th>프레임 워크</th>
+                        <td>Mybatis,&nbsp; SpringSecurity</td>
+                      </tr>
+                      <tr>
+                        <th>IDE</th>
+                        <td>IntelliJ,&nbsp; Visualstudiocode,&nbsp; Github,&nbsp; SqlDeveloper</td>
+                      </tr>
+                      <tr>
+                        <th>API</th>
+                        <td>Jquery, Json</td>
+                      </tr>
+                      <tr>
+                        <th>Github</th>
+                        <td><a style="text-decoration: underline;" href="https://github.com/minsukim0743/ToyProject"
+                            target="_blank">https://github.com/minsukim0743/ToyProject</a></td>
+                      </tr>
+                    </tbody>
+                  </table>
+                  <div class="portfolio-links">
+
+                    <h4 class="aos-init" data-aos="fade-up" data-aos-delay="100">구현 기능</h4><br>
+                    <div class="col-lg-6">
+                      <div class="resume-item aos-init" data-aos="fade-up" data-aos-delay="100">
+                        <ul>
+                          <li><strong>로그인</strong> : UserDetailsService를 재정의하여 로그인 메소드를 구현하였습니다.</li>
+                          <li><strong>로그아웃</strong> : SessionUtil.invalidateSession()를 사용하여 현재 로그인중인 세션을 초기화 하였습니다. </li>
+                          <li><strong>회원가입</strong> : PasswordEncoder를 사용하여 비밀번호를 보안화하였으며, 회원가입시 아이디 중복체크를 할수 있도록 만들었고, 주소 등록은 카카오 지도 API를 사용하였습니다.</li>
+                          <li><strong>비밀번호 재설정</strong> : JavaMail SMTP API를 사용하여 이메일 인증코드를 받아 비밀번호 재설정을 할 수 있도록 만들었습니다.</li>
                         </ul>
                       </div>
                     </div>
