--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
                         </ul>
                       </div>
                       <div class="resume-item aos-init" data-aos="fade-up" data-aos-delay="100">
-                        <h5>[ 댓글 주요(users.recipe) 주요 기능 ]</h5>
+                        <h5>[ 댓글 (users.recipe) 주요 기능 ]</h5>
                         <ul>
                           <li><strong>댓글 등록 / 삭제</strong> : 커뮤니티 컨셉을 반영하여 레시피 게시글 내 자유롭게 댓글을 등록 / 삭제할 수 있습니다.</li>
                           <li><strong>댓글 신고</strong> : 부적절한 리뷰라고 판단될 시 신고할 수 있고, 관리자가 판단하여 블랙리스트를 등록할 수 있습니다.</li>
