ToyProject 기능구현 추가

--- a/index.html
+++ b/index.html
@@ -654,6 +654,7 @@
                           <li><strong>로그아웃</strong> : SessionUtil.invalidateSession()를 사용하여 현재 로그인중인 세션을 초기화 하였습니다. </li>
                           <li><strong>회원가입</strong> : PasswordEncoder를 사용하여 비밀번호를 보안화하였으며, 회원가입시 아이디 중복체크를 할수 있도록 만들었고, 주소 등록은 카카오 지도 API를 사용하였습니다.</li>
                           <li><strong>비밀번호 재설정</strong> : JavaMail SMTP API를 사용하여 이메일 인증코드를 받아 비밀번호 재설정을 할 수 있도록 만들었습니다.</li>
+                          <li><strong>댓글 기능</strong> : Ajax를 사용하여 댓글 리스트 불러오기, 댓글 등록을 할 수 있도록 만들었습니다.</li>
                         </ul>
                       </div>
                     </div>
