프로젝트 소스 PDF추가 및 text 수정

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                 <!--              <img src="assets/img/chickenStock_logo.png" alt="">-->
                 <h3 class="aos-init" data-aos="fade-up" data-aos-delay="100">CHICKENSTOCK</h3>
                 <p class="aos-init" data-aos="fade-up" data-aos-delay="100">
-                  [ 치킨 프랜차이즈 회사 내의 가맹점과 본사의 유통을 간편하고 쉽게 파악할 수 있는 프로그램 ]<br>
+                  [ 치킨 프랜차이즈 본사와 가맹점의 유통관리 ERP 시스템 ]<br>
                   <a style="color: #aaa; text-decoration: underline;"
                     href="https://github.com/minsukim0743/final_chickenstock"
                     target="_blank">https://github.com/minsukim0743/final_chickenstock</a><br>
@@ -281,7 +281,7 @@
                         <th>담당 역할</th>
                         <td>
                           <ul>
-                            <li><strong>Git 형상관리</strong> : 각자가 개발한 코드/문서들을 하나의 관리 도구에서 통합적으로 버전별로 관리&nbsp; -
+                            <li><strong>Git 형상관리</strong> : 각자가 개발한 코드 / 문서들을 하나의 관리 도구에서 통합적으로 버전별로 관리&nbsp; -
                               &nbsp;<strong>기여도 100%</strong></li>
                             <li><strong>가맹점</strong> : 공지사항 / 1:1 문의 / 예치금관리&nbsp; - &nbsp;<strong>기여도 100%</strong>
                             </li>
@@ -290,7 +290,6 @@
                               &middot; 예치금관리&nbsp; - &nbsp;<strong>기여도 70%</strong></li>
                           </ul>
                         </td>
-                      </tr>
                     </tbody>
                   </table>
                   <table>
@@ -299,12 +298,13 @@
                         <th>설명</th>
                         <td>
                           <ul>
+                            <li>프로젝트 소스 바로보기 : <a href="assets/pdf/ChickenStock.pdf" download="ChickenStock" target="_blank"><span style="text-decoration: underline; font-weight: bold;">ChickenStock(PDF)</span></a></li>
                             <li>개발 인원 : 6명</li>
                             <li>공통 역할 : 기획(whimsical) / DB설계(DA#5) / UI설계(figma, bootstrap) /
                               Git형상관리(gitlab)</li>
-                            <li>구현 기능<br>- 가맹점 : 로그인 / 예치금관리 / 품목관리 / 발주관리 / 입고관리 / 반품관리 / 세금계산서 /
-                              거래명세서 / 1:1 문의사항 <br>- 관리자 : 로그인 / 가맹점관리 / 예치금관리 / 입고관리 / 출고관리 / 반품관리 / 세금계산서 / 거래명세서 /
-                              공지사항 / 1:1 문의사항 / 관리자메뉴</li>
+                            <li>구현 기능<br>- 가맹점 : 로그인 / <strong>예치금관리 / 공지사항 / 1:1 문의사항</strong> / 발주관리 / 입고관리 / 반품관리 / 세금계산서 /
+                              거래명세서 / 품목관리 <br>- 관리자 : 로그인 / <strong>예치금관리 / 가맹점관리 / 공지사항 / 1:1 문의사항</strong> / 반품관리 / 세금계산서 / 거래명세서 /
+                              입고관리 / 출고관리 / 관리자메뉴</li>
                           </ul>
                         </td>
                       </tr>
@@ -360,7 +360,7 @@
                   </table>
                 </div>
               </div>
-              <div class="portfolio-links">
+              <!-- <div class="portfolio-links">
                 <h4 class="aos-init" data-aos="fade-up" data-aos-delay="100">1. WBS</h4><br>
                 <div class="xscroll-box aos-init" data-aos="fade-up" data-aos-delay="100"><img src="assets/img/WBS.png">
                 </div>
@@ -438,7 +438,7 @@
                   </div>
                 </div>
                 <hr>
-              </div>
+              </div> -->
             </div>
 
             <div class=" col-lg-6 col-md-8 portfolio-item filter-Spring">
@@ -477,6 +477,7 @@
                         <th>설명</th>
                         <td>
                           <ul>
+                            <li>프로젝트 소스 바로보기 : <a href="assets/pdf/HomeBab.pdf" download="HomeBab" target="_blank"><span style="text-decoration: underline; font-weight: bold;">HomeBab(PDF)</span></a></li>
                             <li>개발 인원 : 7명</li>
                             <li>공통 역할 : 기획(whimsical) / DB설계(DA#5) / UI설계(figma, bootstrap) /
                               Git형상관리(gitlab)</li>
@@ -524,7 +525,7 @@
                       </tr>
                     </tbody>
                   </table>
-                  <div class="portfolio-links">
+                  <!-- <div class="portfolio-links">
                     <h4 class="aos-init" data-aos="fade-up" data-aos-delay="100">1. WBS</h4><br>
                     <div class="xscroll-box aos-init" data-aos="fade-up" data-aos-delay="100"><img
                         src="assets/img/WBS_HOMEBAB.png"></div>
@@ -565,7 +566,7 @@
                       </div>
                     </div>
                     <hr>
-                  </div>
+                  </div> -->
                 </div>
               </div>
             </div>
@@ -596,8 +597,9 @@
                         <th>설명</th>
                         <td>
                           <ul>
+                            <li>프로젝트 소스 바로보기 : <a href="assets/pdf/ToyProject.pdf" download="ToyProject" target="_blank"><span style="text-decoration: underline; font-weight: bold;">ToyProject(PDF)</span></a></li>
                             <li>개발 인원 : 1명(개인 프로젝트)</li>
-                            <li>구현 기능 : 로그인 / 로그아웃 / 회원가입 / 비밀번호 찾기</li>
+                            <li>구현 기능 : 로그인 / 로그아웃 / 회원가입 / 비밀번호 찾기 / 댓글</li>
                           </ul>
                         </td>
                       </tr>
@@ -644,7 +646,7 @@
                       </tr>
                     </tbody>
                   </table>
-                  <div class="portfolio-links">
+                  <!-- <div class="portfolio-links">
 
                     <h4 class="aos-init" data-aos="fade-up" data-aos-delay="100">구현 기능</h4><br>
                     <div class="col-lg-6">
@@ -659,7 +661,7 @@
                       </div>
                     </div>
                     <hr>
-                  </div>
+                  </div> -->
                 </div>
               </div>
             </div>
