--- a/index.html
+++ b/index.html
@@ -665,6 +665,100 @@
                 </div>
               </div>
             </div>
+
+            <div class=" col-lg-6 col-md-8 portfolio-item filter-Spring">
+              <div class="portfolio-links">
+                <h3 class="aos-init" data-aos="fade-up" data-aos-delay="100">Assignment</h3>
+                <p class="aos-init" data-aos="fade-up" data-aos-delay="100">[ DHTMLX 라이브러리를 사용한 프로젝트 ]<br>
+                  <a style="color: #aaa; text-decoration: underline;"
+                    href="https://github.com/minsukim0743/first-assignment"
+                    target="_blank">https://github.com/minsukim0743/first-assignment</a><br><br>
+                  <img src="assets/img/assignment.png" class="img-fluid aos-init" data-aos="fade-up"
+                    data-aos-delay="100" alt="">
+                <div class="aos-init" data-aos="fade-up" data-aos-delay="100">
+                  <table class="aos-init" data-aos="fade-up" data-aos-delay="100">
+                    <tbody>
+                      <tr>
+                        <th>기여도</th>
+                        <td>
+                          전체 100% <strong>(Git 형상관리 및 기능 개발)</strong>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                  <table class="aos-init" data-aos="fade-up" data-aos-delay="100">
+                    <tbody>
+                      <tr>
+                        <th>설명</th>
+                        <td>
+                          <ul>
+                            <li>개발 인원 : 1명(개인 프로젝트)</li>
+                            <li>구현 기능 : 파일 INSERT 내용 읽어 DB 저장 / Paging / DHTMLX Grid Table</li>
+                          </ul>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                  <table class="aos-init" data-aos="fade-up" data-aos-delay="100">
+                    <tbody>
+                      <tr>
+                        <th>기간</th>
+                        <td>2022.12.05 ~ 2022.12.20</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                  <table class="aos-init" data-aos="fade-up" data-aos-delay="100">
+                    <tbody>
+                      <tr>
+                        <th>언어</th>
+                        <td>Java(11),&nbsp; Html/Css, &nbsp;JavaScript</td>
+                      </tr>
+                      <tr>
+                        <th>서버</th>
+                        <td>Apache Tomcat 9.0</td>
+                      </tr>
+                      <tr>
+                        <th>DB</th>
+                        <td>PostgreSql</td>
+                      </tr>
+                      <tr>
+                        <th>프레임 워크</th>
+                        <td>Spring-Legacy,&nbsp; Mybatis</td>
+                      </tr>
+                      <tr>
+                        <th>IDE</th>
+                        <td>IntelliJ,&nbsp; Visualstudiocode,&nbsp; Github,&nbsp; pgAdmin4</td>
+                      </tr>
+                      <tr>
+                        <th>API</th>
+                        <td>Jquery, Json, DHTMLX Suite 5</td>
+                      </tr>
+                      <tr>
+                        <th>Github</th>
+                        <td><a style="text-decoration: underline;" href="https://github.com/minsukim0743/first-assignment"
+                            target="_blank">https://github.com/minsukim0743/first-assignment</a></td>
+                      </tr>
+                    </tbody>
+                  </table>
+                  <!-- <div class="portfolio-links">
+
+                    <h4 class="aos-init" data-aos="fade-up" data-aos-delay="100">구현 기능</h4><br>
+                    <div class="col-lg-6">
+                      <div class="resume-item aos-init" data-aos="fade-up" data-aos-delay="100">
+                        <ul>
+                          <li><strong>로그인</strong> : UserDetailsService를 재정의하여 로그인 메소드를 구현하였습니다.</li>
+                          <li><strong>로그아웃</strong> : SessionUtil.invalidateSession()를 사용하여 현재 로그인중인 세션을 초기화 하였습니다. </li>
+                          <li><strong>회원가입</strong> : PasswordEncoder를 사용하여 비밀번호를 보안화하였으며, 회원가입시 아이디 중복체크를 할수 있도록 만들었고, 주소 등록은 카카오 지도 API를 사용하였습니다.</li>
+                          <li><strong>비밀번호 재설정</strong> : JavaMail SMTP API를 사용하여 이메일 인증코드를 받아 비밀번호 재설정을 할 수 있도록 만들었습니다.</li>
+                          <li><strong>댓글 기능</strong> : Ajax를 사용하여 댓글 리스트 불러오기, 댓글 등록, 삭제를 할 수 있도록 만들었습니다.</li>
+                        </ul>
+                      </div>
+                    </div>
+                    <hr>
+                  </div> -->
+                </div>
+              </div>
+            </div>
           </div>
         </div>
     </section><!-- End portfolio Section -->
