assignment 구현기능 내용 추가

--- a/index.html
+++ b/index.html
@@ -693,7 +693,7 @@
                         <td>
                           <ul>
                             <li>개발 인원 : 1명(개인 프로젝트)</li>
-                            <li>구현 기능 : 파일 INSERT 내용 읽어 DB 저장 / Paging / DHTMLX Grid Table</li>
+                            <li>구현 기능 : 파일 INSERT 내용 읽어 DB 저장 / Paging / DHTMLX Grid Table / List 조회하여 Excel 저장</li>
                           </ul>
                         </td>
                       </tr>
