--- a/index.html
+++ b/index.html
@@ -668,7 +668,7 @@
 
             <div class=" col-lg-6 col-md-8 portfolio-item filter-Spring">
               <div class="portfolio-links">
-                <h3 class="aos-init" data-aos="fade-up" data-aos-delay="100">Assignment</h3>
+                <h3 class="aos-init" data-aos="fade-up" data-aos-delay="100">DHTMLX</h3>
                 <p class="aos-init" data-aos="fade-up" data-aos-delay="100">[ DHTMLX 라이브러리를 사용한 프로젝트 ]<br>
                   <a style="color: #aaa; text-decoration: underline;"
                     href="https://github.com/minsukim0743/first-assignment"
@@ -681,7 +681,7 @@
                       <tr>
                         <th>기여도</th>
                         <td>
-                          전체 100% <strong>(Git 형상관리 및 기능 개발)</strong>
+                          전체 100% <strong>(기능 개발)</strong>
                         </td>
                       </tr>
                     </tbody>
@@ -693,7 +693,7 @@
                         <td>
                           <ul>
                             <li>개발 인원 : 1명(개인 프로젝트)</li>
-                            <li>구현 기능 : 파일 INSERT 내용 읽어 DB 저장 / Paging / DHTMLX Grid Table / List 조회하여 Excel 저장</li>
+                            <li>구현 기능 : text파일 내용 읽어 DB INSERT 저장 / Paging / DHTMLX Grid Table / Data 조회하여 Excel 저장</li>
                           </ul>
                         </td>
                       </tr>
@@ -727,7 +727,7 @@
                       </tr>
                       <tr>
                         <th>IDE</th>
-                        <td>IntelliJ,&nbsp; Visualstudiocode,&nbsp; Github,&nbsp; pgAdmin4</td>
+                        <td>IntelliJ,&nbsp; Visualstudiocode,&nbsp; pgAdmin4</td>
                       </tr>
                       <tr>
                         <th>API</th>
