--- a/index.html
+++ b/index.html
@@ -151,6 +151,13 @@
                 </div>
               </div>
             </div>
+            <div class="progress">
+              <span class="skill">LINUX <i class="val">80%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div>
           </div>
           <div class="col-lg-4 aos-init" data-aos="fade-up" data-aos-delay="100">
             <h4 class="bi bi-chevron-right" data-aos="fade-up">&nbsp; IDE</h4>
@@ -189,6 +196,20 @@
             <h4 class="bi bi-chevron-right" data-aos="fade-up">&nbsp; DATABASE</h4>
             <div class="progress">
               <span class="skill">Oracle <i class="val">100%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div>
+            <div class="progress">
+              <span class="skill">MariaDB <i class="val">100%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div>
+            <div class="progress">
+              <span class="skill">PostgreSql <i class="val">100%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
                 </div>
