--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@
                         <td>
                           <ul>
                             <li>개발 인원 : 1명(개인 프로젝트)</li>
-                            <li>구현 기능 : text파일 내용 읽어 DB INSERT 저장 / Paging / DHTMLX Grid Table / Data 조회하여 Excel 저장</li>
+                            <li>구현 기능 : text파일 내용 읽어 DB INSERT 저장 / Paging / DHTMLX Grid Table / Poi 라이브러리 사용하여 Data 조회 후 Excel 저장</li>
                           </ul>
                         </td>
                       </tr>
