--- a/index.html
+++ b/index.html
@@ -618,19 +618,12 @@
                         <th>설명</th>
                         <td>
                           <ul>
-                            <li>프로젝트 소스 바로보기 : <a href="assets/pdf/ToyProject.pdf" download="ToyProject" target="_blank"><span style="text-decoration: underline; font-weight: bold;">ToyProject(PDF)</span></a></li>
+                            <li>프로젝트 설명 : <span style="text-decoration: underline; font-weight: bold;">swagger-ui/index.html 참고
+                         </span></li>
                             <li>개발 인원 : 1명(개인 프로젝트)</li>
-                            <li>구현 기능 : 로그인 / 로그아웃 / 회원가입 / 비밀번호 찾기 / 댓글</li>
+                            <li>구현 기능 : 로그인 / 로그아웃 / 회원가입 / 비밀번호 찾기 / 댓글 / 게시판</li>
                           </ul>
                         </td>
-                      </tr>
-                    </tbody>
-                  </table>
-                  <table class="aos-init" data-aos="fade-up" data-aos-delay="100">
-                    <tbody>
-                      <tr>
-                        <th>기간</th>
-                        <td>2022.10.17 ~ 2022.10.23</td>
                       </tr>
                     </tbody>
                   </table>
@@ -650,7 +643,7 @@
                       </tr>
                       <tr>
                         <th>프레임 워크</th>
-                        <td>Spring-framwork(boot 2.7.3),&nbsp; Mybatis,&nbsp; SpringSecurity</td>
+                        <td>Spring-framwork(boot 2.7.4),&nbsp; Mybatis,&nbsp; SpringSecurity</td>
                       </tr>
                       <tr>
                         <th>IDE</th>
@@ -658,7 +651,7 @@
                       </tr>
                       <tr>
                         <th>API</th>
-                        <td>Jquery, Json</td>
+                        <td>Jquery, Json, Swagger(API문서화 정리)</td>
                       </tr>
                       <tr>
                         <th>Github</th>
@@ -667,22 +660,6 @@
                       </tr>
                     </tbody>
                   </table>
-                  <!-- <div class="portfolio-links">
-
-                    <h4 class="aos-init" data-aos="fade-up" data-aos-delay="100">구현 기능</h4><br>
-                    <div class="col-lg-6">
-                      <div class="resume-item aos-init" data-aos="fade-up" data-aos-delay="100">
-                        <ul>
-                          <li><strong>로그인</strong> : UserDetailsService를 재정의하여 로그인 메소드를 구현하였습니다.</li>
-                          <li><strong>로그아웃</strong> : SessionUtil.invalidateSession()를 사용하여 현재 로그인중인 세션을 초기화 하였습니다. </li>
-                          <li><strong>회원가입</strong> : PasswordEncoder를 사용하여 비밀번호를 보안화하였으며, 회원가입시 아이디 중복체크를 할수 있도록 만들었고, 주소 등록은 카카오 지도 API를 사용하였습니다.</li>
-                          <li><strong>비밀번호 재설정</strong> : JavaMail SMTP API를 사용하여 이메일 인증코드를 받아 비밀번호 재설정을 할 수 있도록 만들었습니다.</li>
-                          <li><strong>댓글 기능</strong> : Ajax를 사용하여 댓글 리스트 불러오기, 댓글 등록, 삭제를 할 수 있도록 만들었습니다.</li>
-                        </ul>
-                      </div>
-                    </div>
-                    <hr>
-                  </div> -->
                 </div>
               </div>
             </div>
