--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@
                             <li>프로젝트 설명 : <span style="text-decoration: underline; font-weight: bold;">swagger-ui/index.html 참고
                          </span></li>
                             <li>개발 인원 : 1명(개인 프로젝트)</li>
-                            <li>구현 기능 : 로그인 / 로그아웃 / 회원가입 / 비밀번호 찾기 / 댓글 / 게시판</li>
+                            <li>구현 기능 : 로그인 / 로그아웃 / 회원가입 / 비밀번호 찾기(SMTP) / 댓글 / 게시판</li>
                           </ul>
                         </td>
                       </tr>
